Fix alignment

--- a/css/extraction.css
+++ b/css/extraction.css
@@ -74,7 +74,7 @@ article {
 .parameter {
   width: 45%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 
   margin-bottom: 10px;
   font-size: 0.7em;
